最初の記事書いた

--- a/content/blog/2018/09/14.md
+++ b/content/blog/2018/09/14.md
@@ -1,22 +1,20 @@
 ---
-title: 投稿テスト投稿テスト投稿テスト記事のタイトル記事のタイトル記事のタイトル
+title: 技術や仕事に関する記事を書いていきます
 date: 2018-09-14
 categories:
-  - WEBサービス開発
+  - lightly
 tags:
-  - ruby
-  - rails
+  - 便利
+  - 技術
 image: 
 ---
-私は以前もしどんな運動士ていうのの時をするでたい。けっして当時が開始らは同時にその仕事でたかもがあって下さろですには観念しだですて、ますますには得でしょですましで。
+お仕事したことや、便利な技術に関する情報をこちらのブログに書いていきます。
 
 <!--more-->
 
-受売が知れだっのはよほど今日がもしうないです。とにかく張さんに経験考なぜ創設をありで符その自分私か意味をという肝お話しなけれうますだで、この今も何か英語態度の行くて、嘉納君ののが思想の何をしばしばご影響と諦めからあなたいた事を今譴責へなっように無論ご観念にしありですて、けっして必ずしも増減へあるでしょてしまうなのに行きないでし。
+最近クライアントさんから「君の仕事に関するブログはないの？」と聞かれたことがあり、「こんな事できますorやれます」が伝わるよう、技術に関することをブログに書いていくことにしました。
 
-投稿テスト
+ITサポートや顧問エンジニアとして、どんな問題を解決するために開発やコードを書いたか分かりやすいよう書いていきます。
 
-記事の投稿てすと
-投稿テスト
+また、個人で勉強したことやIT運営・戦略などの便利な情報も書いていけたらなと思います。
 
-記事の投稿てすと
