--- a/content/blog/2018/09/19.md
+++ b/content/blog/2018/09/19.md
@@ -11,5 +11,7 @@ image:
 ---
 WEBアプリケーションではない普通のWEBサイト(以下静的ページ)を制作する時、みなさんどういうツールやサービスを使っていますか？
 
+<!--more-->
+
 静的ページとは、ブログや日記形式でない会社サイト(コーポレートサイト)、ランディングページ、商品紹介ページ。またはショッピングサイトなどのhtmlページ(楽天goldやYahooトリプル等)です。
 
