記事内容を修正

--- a/content/blog/2018/09/14.md
+++ b/content/blog/2018/09/14.md
@@ -12,9 +12,7 @@ image:
 
 <!--more-->
 
-最近クライアントさんから「君の仕事に関するブログはないの？」と聞かれたことがあり、「こんな事できますorやれます」が伝わるよう、技術に関することをブログに書いていくことにしました。
-
-ITサポートや顧問エンジニアとして、どんな問題を解決するために開発やコードを書いたか分かりやすいよう書いていきます。
+どんな問題を解決するために開発やコードを書いたか分かりやすいよう書いていきます。
 
 また、個人で勉強したことやIT運営・戦略などの便利な情報も書いていけたらなと思います。
 
