--- a/content/blog/2016/11/22.md
+++ b/content/blog/2016/11/22.md
@@ -1,5 +1,6 @@
 ---
 title: Bash on Ubuntu on Windows10でapt-get installしようとしたらカスペルスキー(2016)が原因でエラーがでた話
+date: 2016-11-22
 categories:
   - windows
 tags:
