--- a/content/blog/2017/11/27.md
+++ b/content/blog/2017/11/27.md
@@ -1,5 +1,6 @@
 ---
 title: Railsの画像アップロードをCarrierwave + S3からCarrierwave + Cloudinaryに移行しようとして詰まった話
+date: 2017-11-27
 categories:
   - rails
 tags:
