--- a/content/blog/2018/03/08.md
+++ b/content/blog/2018/03/08.md
@@ -1,5 +1,6 @@
 ---
 title: "AWS(Amazon) Cloud9でPostgreSQLを起動しようとしたらpostgresql: unrecognized serviceと表示される問題の解決方法"
+date: 2018-03-08
 categories:
   - aws
 tags:
