--- a/content/blog/2018/06/07.md
+++ b/content/blog/2018/06/07.md
@@ -1,5 +1,6 @@
 ---
 title: GitHubからGitLabに移行したので、GitLab-CI(Docker環境)でRails+MinitestをHeadlessChromeで回そうと思ったらめっちゃ大変だった
+date: 2018-06-07
 categories:
   - github
   - gitlab
