--- a/content/blog/2014/03/24.md
+++ b/content/blog/2014/03/24.md
@@ -1,5 +1,6 @@
 ---
 title: "Rubyで日本語の入ったcsv(utf-8)を使おうと思ったらinvalid byte sequence in Windows-31Jエラーが出たのでメモ"
+date: 2014-03-24
 categories:
   - ruby
 tags:
