--- a/content/blog/2016/03/31.md
+++ b/content/blog/2016/03/31.md
@@ -9,7 +9,7 @@ tags:
 image:
 ---
 <div class="guidance_to_new_article">
-※新しい<a href="{{site.baseurl}}{% post_url 2018/02/2018-02-06-11-59 %}">middleman(4.2.1) + webpack(3.10.0)でモダンな静的サイトのテンプレートを作る</a>という記事を書きました。この記事は古い内容になります。
+※新しい<a href="//www.t4traw.net/blog/2018/02/middleman4.2.1---webpack3.10.0%E3%81%A7%E3%83%A2%E3%83%80%E3%83%B3%E3%81%AA%E9%9D%99%E7%9A%84%E3%82%B5%E3%82%A4%E3%83%88%E3%81%AE%E3%83%86%E3%83%B3%E3%83%97%E3%83%AC%E3%83%BC%E3%83%88%E3%82%92%E4%BD%9C%E3%82%8B/">middleman(4.2.1) + webpack(3.10.0)でモダンな静的サイトのテンプレートを作る</a>という記事を書きました。この記事は古い内容になります。
 </div>
 
 <!--more-->
