--- a/content/blog/2016/02/20.md
+++ b/content/blog/2016/02/20.md
@@ -7,7 +7,7 @@ tags:
   - fishing
   - メバル
   - 釣果
-image: i.imgur.com/WBqxdmS.jpg
+image: https://s3-ap-northeast-1.amazonaws.com/t4traw/ss/2018-11-29_10-27-13.png
 ---
 最近ライトソルトルアーを始めて色々試行錯誤しているのですが、ようやく手応えのあるサイズのメバルを釣り上げる事ができました❗
 
