もしかしすぎていたので修正

--- a/content/blog/2018/12/03.md
+++ b/content/blog/2018/12/03.md
@@ -54,7 +54,7 @@ Java BikesというメーカーのSiluro2 2018年モデルです。
 <blockquote class="twitter-tweet" data-lang="ja"><p lang="ja" dir="ltr">“双十一”后各地快递仓库爆满　今年も昨日11月11日の「独身の日」セールで売り上げた1兆円分の商品を各地に届ける、中国の宅配便事業者の戦いの始まり　<a href="http://t.co/RCToqlPoVN">http://t.co/RCToqlPoVN</a> <a href="http://t.co/7ckIEaC10o">pic.twitter.com/7ckIEaC10o</a></p>&mdash; 中国住み (@livein_china) <a href="https://twitter.com/livein_china/status/532559582858444800?ref_src=twsrc%5Etfw">2014年11月12日</a></blockquote>
 <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 
-もしかしてそういう日の方がチャットの割引もしれくれるんじゃない？とおもっていましたが、もしかしたら裏目ってたかもしれませんね😂 次に買うとしたら国内で保証がある状態で買おうと心に誓いました。
+「そういうイベントの時の方がチャットとかの交渉で割引もしれくれるんじゃない？」とおもっていましたが、それが裏目ってたかもしれませんね😂 次に買うとしたら国内で保証がある状態で買おうと心に誓いました。
 
 購入前にチャットで「輸入になるからちょっと高いんだよねー。お安くしてくれない？」と話すと良いと聞いたので、チャットしたところ「送料込みで$560でええよ」って来ました。送料は約$85だったので、$560-$85-クーポン$10-傷モノアウトレット割$112で$353(約39889円)って考えれば僕的には納得の範囲。買った物は乗り潰す性分なので、このぐらいの傷は正直許容範囲。
 
