RSSフィードの実装と一部記事の修正

--- a/content/blog/2018/08/17.md
+++ b/content/blog/2018/08/17.md
@@ -8,7 +8,7 @@ tags:
   - review
 image: https://s3-ap-northeast-1.amazonaws.com/t4traw/IMG_20572.png
 ---
-ふらっと書店をぶらついていたら目に飛び込んできた本があった。大山淳子さんの『あずかりやさん』という本なのだけど、水彩絵の具を使ったデザインで、まるで縁日のような懐かしさのある可愛いブックカバーがしてあったのです(写真左側のバー)。僕は思わず所謂ジャケ買いをしました。
+ふらっと書店をぶらついていたら目に飛び込んできた本があった。大山淳子さんの**あずかりやさん**という本なのだけど、水彩絵の具を使ったデザインで、まるで縁日のような懐かしさのある可愛いブックカバーがしてあったのです(写真左側のバー)。僕は思わず所謂ジャケ買いをしました。
 
 <!--more-->
 
