--- a/content/blog/2018/07/26.md
+++ b/content/blog/2018/07/26.md
@@ -243,7 +243,7 @@ execute "openssl dhparam 2048 -out /etc/nginx/ssl/dhparam.pem"
 
 今回はRails5.2なので、シークレット系は基本的に全てcredentials.yml.encで管理するようにしました。なので、環境変数RAILS_MASTER_KEYを設定しないといけないのですが、以下みたいな書き方が一番安全かつ分かりやすかったです。
 
-```
+```ruby
 file "/home/#{node['user']['name']}/.bashrc" do
   action :edit
   not_if "test $RAILS_MASTER_KEY"
