メールサーバーの記事書いた

--- a/content/blog/2018/12/05.md
+++ b/content/blog/2018/12/05.md
@@ -54,7 +54,7 @@ image: https://s3-ap-northeast-1.amazonaws.com/t4traw/ss/2018-12-05_12-02-51.png
 それでは。
 
 <div class="amazfy">
-<a href="https://amzn.to/2KZemxA" class="amazfy">
+<a href="https://amzn.to/2KZemxA">
 <img src="https://images-fe.ssl-images-amazon.com/images/I/411UEaVqGuL._SL250_.jpg">
 <p>[ティンバック2] ショルダーバッグ カタパルトスリング OS 1704-3</p>
 </a>
