firewalldの記事を公開

--- a/content/blog/2018/12/07.md
+++ b/content/blog/2018/12/07.md
@@ -10,7 +10,6 @@ tags:
   - itamae
   - letsencrypt
 image: https://s3-ap-northeast-1.amazonaws.com/t4traw/ss/2018-12-06_10-53-23.png
-draft: true
 ---
 ひとまずFirewallの設定から。CentOS7からはファイアウォールがiptablesではなくfirewalldに変わったらしい。
 
@@ -28,13 +27,13 @@ service 'firewalld' do
 end
 
 # 自分用のsshポートを開ける
-execute "add my-ssh port" do
+execute "Add new ssh port" do
   user "root"
-  command "firewall-cmd --permanent --add-port=#{node.ssh.port}/tcp --zone=public"
+  command "firewall-cmd --permanent --add-port=#{node[:ssh][:port]}/tcp --zone=public"
 end
 
 # デフォルトのsshポートを閉じる
-execute "remove default ssh port" do
+execute "Close default ssh port" do
   user "root"
   command "firewall-cmd --permanent --remove-service=ssh"
 end
@@ -43,8 +42,8 @@ end
 execute "add web server ports" do
   user "root"
   cmd = [
-    'firewall-cmd --permanent --add-service=http --zone=public',
-    'firewall-cmd --permanent --add-service=https --zone=public'
+    'firewall-cmd --add-port=80/tcp --permanent --zone=public',
+    'firewall-cmd --add-port=443/tcp --permanent --zone=public'
   ]
   command cmd.join('&&')
 end
@@ -53,15 +52,25 @@ end
 execute "add mail server ports" do
   user "root"
   cmd = [
-    'firewall-cmd --permanent --add-service=smtp --zone=public',
-    'firewall-cmd --permanent --add-service=pop3s --zone=public',
-    'firewall-cmd --permanent --add-service=imaps --zone=public',
-    'firewall-cmd --permanent --add-service=imaps --zone=public'
+    'firewall-cmd --add-port=25/tcp --permanent --zone=public',
+    'firewall-cmd --add-port=465/tcp --permanent --zone=public',
+    'firewall-cmd --add-port=993/tcp --permanent --zone=public',
+    'firewall-cmd --add-port=995/tcp --permanent --zone=public'
   ]
   command cmd.join('&&')
 end
 
+execute 'firewall-cmd --reload'
+
 service 'firewalld' do
   action [:restart]
 end
+
 ```
+うん、とってもシェルスクリプトでいい感を醸し出してるけど、まあいいやｗ
+
+iptablesでサクっとファイル転送も良かったけど、実際サーバーを建ててからsshでなにかする時は、firewalldの方が簡単で操作しやすく分かりやすいなと思いました。
+
+次はPostfixとDovecotのレシピ書きます。
+
+それでは。
