PostfixとDovecotの記事書いた。
これ、明日の日付でpushしたらどうなるんだろ

--- a/content/blog/2018/12/06.md
+++ b/content/blog/2018/12/06.md
@@ -41,9 +41,11 @@ image: https://s3-ap-northeast-1.amazonaws.com/t4traw/ss/2018-12-06_10-53-23.png
 
 というわけでこれからレシピと覚え書きを記事に書いていこうかなと思います。
 
+※全体的なレシピもGitHubにpushしてあります。
+
+[t4traw/mailserver-itamae-recipe](https://github.com/t4traw/mailserver-itamae-recipe)
+
 ## 参考にさせていただきました🙇
 
-- [メールサーバー構築(Postfix+Dovecot) - CentOSで自宅サーバー構築](https://centossrv.com/postfix.shtml)
+- [メールサーバー構築 Postfix+Dovecot  - CentOSで自宅サーバー構築](https://centossrv.com/postfix.shtml)
 - [CentOS7 メールサーバー構築　postfix+dovecot+postfixadmin+mysql+privateCA で imaps クライアント認証及びSMTP-Auth対応 - B級システムエンジニアの備忘録](https://laver-tips.info/2018/01/06/mail_server_clientauth/)
-- [OpenSSLでプライベートCAを構築して、クライアント用ルート証明書を作成 | OXY NOTES](https://oxynotes.com/?p=4516)
-- [MySQL5.7の初期rootパスワード変更をItamaeで自動化してみる](https://github.com/shimoju/til/blob/master/%5Bmysql%20itamae%5D%20mysql-57-root-password.md)
