--- a/content/blog/2018/12/07.md
+++ b/content/blog/2018/12/07.md
@@ -74,3 +74,7 @@ iptablesでサクっとファイル転送も良かったけど、実際サーバ
 次はPostfixとDovecotのレシピ書きます。
 
 それでは。
+
+※全体的なレシピもGitHubにpushしてあります。
+
+[t4traw/mailserver-itamae-recipe](https://github.com/t4traw/mailserver-itamae-recipe)
