まだ下記途中

--- a/content/blog/2018/12/10.md
+++ b/content/blog/2018/12/10.md
@@ -1,5 +1,5 @@
 ---
-title: ロードバイクを乗るようになって1週目の思い出
+title: ロードバイクを乗るようになって7日目の思い出
 date: 2018-12-10T10:10:33+09:00
 categories:
   - ロードバイク
@@ -36,4 +36,5 @@ draft: true
 
 でした。手に関してはグローブは必須だろうなぁと最初から予想していたので、ちょこっと乗ってすぐにグローブを購入しました。
 
-お尻が痛いのは友達から聞いてたり、種類があるのを知っていたけど、
+お尻が痛いのと耳が冷たいのはすぐに慣れました。が、サドルに関しては僕はレースとか速さとかに興味がないので、快適に乗れるサドルに交換しようかなぁと思っています。
+
