OGK KABUTO REZZAの記事書いた

--- a/content/blog/2018/12/03.md
+++ b/content/blog/2018/12/03.md
@@ -2,9 +2,9 @@
 title: Java Siluro2 2018を購入。ついにロードバイク乗りになりました。
 date: 2018-12-03T15:54:50+09:00
 categories:
-  - roadbike
+  - ロードバイク
 tags:
-  - roadbike
+  - ロードバイク
   - javabikes
   - siluro
 image: https://s3-ap-northeast-1.amazonaws.com/t4traw/ss/IMG_2476.png
