--- a/content/blog/2018/12/05.md
+++ b/content/blog/2018/12/05.md
@@ -2,7 +2,7 @@
 title: ロードバイクの通勤用にTimbuk2のショルダーバッグ カタパルトスリングを購入したのでレビュー
 date: 2018-12-05T09:06:45+09:00
 categories:
-  - roadbike
+  - ロードバイク
   - 志の低いローディー
 tags:
   - ロードバイク
