あたらしいarchetypeを作成

--- a/content/blog/2018/12/14-113633.md
+++ b/content/blog/2018/12/14-113633.md
@@ -1,8 +1,8 @@
 ---
-title: 2018年12月14日の気になったニュースまとめ
+title: 2018年12月14日の気になったものまとめ
 date: 2018-12-14T11:36:36+09:00
 categories:
-  - ニュース
+  - まとめ
 tags:
   - 昭和の会社
   - 夫婦
