--- a/content/blog/2018/12/17-094459.md
+++ b/content/blog/2018/12/17-094459.md
@@ -21,9 +21,25 @@ draft: true
 
 ![](https://s3-ap-northeast-1.amazonaws.com/t4traw/ss/2018-12-17_13-40-01.png)
 
-うん、やっぱり合ってる。
+うん、やっぱり合ってる。マットな感じのボトルケージにして正解でした。
+
+ま、とりあえずレースとかブルベとかイベントにでるわけでもないし、街乗りてか通勤メインだからしばらくペットボトルさしておけば水分補給は大丈夫っしょ👍
 
 ![](https://s3-ap-northeast-1.amazonaws.com/t4traw/ss/2018-12-17_17-02-31.png)
 
-<table cellpadding="0" cellspacing="0" border="0" style=" border-style: none; width:300px;"><tr style="border-style:none;"><td style="vertical-align:top; border-style:none; padding:10px; width:108px;"><a href="https://rpx.a8.net/svt/ejp?a8mat=2ZVUY6+929KAA+2HOM+BWGDT&rakuten=y&a8ejpredirect=http%3A%2F%2Fhb.afl.rakuten.co.jp%2Fhgc%2Fg00pr9s4.2bo117dc.g00pr9s4.2bo12e50%2Fa18120549492_2ZVUY6_929KAA_2HOM_BWGDT%3Fpc%3Dhttp%253A%252F%252Fitem.rakuten.co.jp%252Fride-on%252F08marui366%252F%26m%3Dhttp%253A%252F%252Fm.rakuten.co.jp%252Fride-on%252Fi%252F10032226%252F" target="_blank" rel="nofollow"><img border="0" alt="" src="https://thumbnail.image.rakuten.co.jp/@0_mall/ride-on/cabinet/topeak/08marui366.jpg?_ex=300x300" /></a></td><td style="font-size:12px; vertical-align:middle; border-style:none; padding:10px;"><p style="padding:0; margin:0;"><a href="https://rpx.a8.net/svt/ejp?a8mat=2ZVUY6+929KAA+2HOM+BWGDT&rakuten=y&a8ejpredirect=http%3A%2F%2Fhb.afl.rakuten.co.jp%2Fhgc%2Fg00pr9s4.2bo117dc.g00pr9s4.2bo12e50%2Fa18120549492_2ZVUY6_929KAA_2HOM_BWGDT%3Fpc%3Dhttp%253A%252F%252Fitem.rakuten.co.jp%252Fride-on%252F08marui366%252F%26m%3Dhttp%253A%252F%252Fm.rakuten.co.jp%252Fride-on%252Fi%252F10032226%252F" target="_blank" rel="nofollow">【20%OFF】 トピーク ボトルケージ モジュラー ケージ EX[WBC034]【TOPEAK】</a></p><p style="color:#666; margin-top:5px line-height:1.5;">価格:<span style="font-size:14px; color:#C00; font-weight:bold;">691円</span><br/><span style="font-size:10px; font-weight:normal;">(2018/12/15 02:27時点)</span><br/><span style="font-weight:bold;">感想(5件)</span></p></td></tr></table>
+## ペットボトルだとやっぱり不便なシーンが多い
+
+今の季節だと大体20分感覚で水分補給したいところです。信号などで止まってペットボトルを開ければいいかなーって思ったんですが、自転車だと中道を走ったり止まらない道を選択できるので、20−30分走り続けることもあります。
+
+ペットボトルの蓋をあけて、飲んで、締めてーってなると、やっぱ両手ないと厳しい。なので、片手で飲めるタイプのボトルが欲しくなります。
+
+夏だともっとこまめに補給したくなるだろうし、暑い季節は保冷も考えたいので、もう少ししたらレースボトルを買ってみようかなと思います。
+
+## Amazonで売ってるものは偽物だったり高いっぽい
+
+Amazonで売ってるものは、レビューを見ると本物と少し違ったり、そもそも定価以上の価格だったりします。なので、近くにショップがある方はショップで、通販なら楽天などを利用したほうが良さそうです。
+
+<table cellpadding="0" cellspacing="0" border="0" style=" border-style: none; width:100%;"><tr style="border-style:none;"><td style="vertical-align:top; border-style:none; padding:10px; width:300px;"><a href="https://rpx.a8.net/svt/ejp?a8mat=2ZVUY6+929KAA+2HOM+BWGDT&rakuten=y&a8ejpredirect=http%3A%2F%2Fhb.afl.rakuten.co.jp%2Fhgc%2Fg00pr9s4.2bo117dc.g00pr9s4.2bo12e50%2Fa18120549492_2ZVUY6_929KAA_2HOM_BWGDT%3Fpc%3Dhttp%253A%252F%252Fitem.rakuten.co.jp%252Fride-on%252F08marui366%252F%26m%3Dhttp%253A%252F%252Fm.rakuten.co.jp%252Fride-on%252Fi%252F10032226%252F" target="_blank" rel="nofollow"><img border="0" alt="" src="https://thumbnail.image.rakuten.co.jp/@0_mall/ride-on/cabinet/topeak/08marui366.jpg?_ex=300x300" /></a></td><td style="font-size:12px; vertical-align:middle; border-style:none; padding:10px;"><p style="padding:0; margin:0;"><a href="https://rpx.a8.net/svt/ejp?a8mat=2ZVUY6+929KAA+2HOM+BWGDT&rakuten=y&a8ejpredirect=http%3A%2F%2Fhb.afl.rakuten.co.jp%2Fhgc%2Fg00pr9s4.2bo117dc.g00pr9s4.2bo12e50%2Fa18120549492_2ZVUY6_929KAA_2HOM_BWGDT%3Fpc%3Dhttp%253A%252F%252Fitem.rakuten.co.jp%252Fride-on%252F08marui366%252F%26m%3Dhttp%253A%252F%252Fm.rakuten.co.jp%252Fride-on%252Fi%252F10032226%252F" target="_blank" rel="nofollow">【20%OFF】 トピーク ボトルケージ モジュラー ケージ EX[WBC034]【TOPEAK】</a></p><p style="color:#666; margin-top:5px line-height:1.5;">価格:<span style="font-size:14px; color:#C00; font-weight:bold;">691円</span><br/><span style="font-size:10px; font-weight:normal;">(2018/12/15 02:27時点)</span><br/><span style="font-weight:bold;">感想(5件)</span></p></td></tr></table>
 <img border="0" width="1" height="1" src="https://www16.a8.net/0.gif?a8mat=2ZVUY6+929KAA+2HOM+BWGDT" alt="">
+
+それでは。
