--- a/content/blog/2018/12/17-094459.md
+++ b/content/blog/2018/12/17-094459.md
@@ -9,7 +9,6 @@ tags:
   - Topeak
   - ボトル
 image: https://s3-ap-northeast-1.amazonaws.com/t4traw/ss/2018-12-17_13-39-06.png
-draft: true
 ---
 ロードバイクに乗っているととても汗をかきます。「思ってた以上に水分補給が大事だな」と実感。さっそく、ボトルケージを購入しました。
 
@@ -33,13 +32,17 @@ draft: true
 
 ペットボトルの蓋をあけて、飲んで、締めてーってなると、やっぱ両手ないと厳しい。なので、片手で飲めるタイプのボトルが欲しくなります。
 
-夏だともっとこまめに補給したくなるだろうし、暑い季節は保冷も考えたいので、もう少ししたらレースボトルを買ってみようかなと思います。
+もしくは、これなんかとりあえず携帯して持っておいたら便利かな？とか考えています。
+
+<a href="https://www.amazon.co.jp/%E3%82%B9%E3%82%B1%E3%83%BC%E3%82%BF%E3%83%BC-%E6%90%BA%E5%B8%AF%E3%82%B1%E3%83%BC%E3%82%B9%E4%BB%98-%E3%83%9A%E3%83%83%E3%83%88%E3%83%9C%E3%83%88%E3%83%AB-%E3%82%B9%E3%83%88%E3%83%AD%E3%83%BC%E3%82%AD%E3%83%A3%E3%83%83%E3%83%97-PSHC5/dp/B001HY9K5E/ref=as_li_ss_il?_encoding=UTF8&pd_rd_i=B001HY9K5E&pd_rd_r=18220bbd-0259-11e9-b41d-dff7fa1c5563&pd_rd_w=gR5Hb&pd_rd_wg=90bzZ&pf_rd_p=cda7018a-662b-401f-9c16-bd4ec317039e&pf_rd_r=2P2140DRF8GN5WBDF8EJ&psc=1&refRID=2P2140DRF8GN5WBDF8EJ&linkCode=li3&tag=t4traw-22&linkId=e446a7f5a3a402fb2eb003c92dbf157f&language=ja_JP" target="_blank"><img border="0" src="//ws-fe.amazon-adsystem.com/widgets/q?_encoding=UTF8&ASIN=B001HY9K5E&Format=_SL250_&ID=AsinImage&MarketPlace=JP&ServiceVersion=20070822&WS=1&tag=t4traw-22&language=ja_JP" ></a><img src="https://ir-jp.amazon-adsystem.com/e/ir?t=t4traw-22&language=ja_JP&l=li3&o=9&a=B001HY9K5E" width="1" height="1" border="0" alt="" style="border:none !important; margin:0px !important;" />
+
+暑い季節だともっとこまめに補給したくなるだろうし、保冷も考えたいので、もう少ししたらレースボトルを買ってみようかなと思います。
 
 ## Amazonで売ってるものは偽物だったり高いっぽい
 
 Amazonで売ってるものは、レビューを見ると本物と少し違ったり、そもそも定価以上の価格だったりします。なので、近くにショップがある方はショップで、通販なら楽天などを利用したほうが良さそうです。
 
+それでは。
+
 <table cellpadding="0" cellspacing="0" border="0" style=" border-style: none; width:100%;"><tr style="border-style:none;"><td style="vertical-align:top; border-style:none; padding:10px; width:300px;"><a href="https://rpx.a8.net/svt/ejp?a8mat=2ZVUY6+929KAA+2HOM+BWGDT&rakuten=y&a8ejpredirect=http%3A%2F%2Fhb.afl.rakuten.co.jp%2Fhgc%2Fg00pr9s4.2bo117dc.g00pr9s4.2bo12e50%2Fa18120549492_2ZVUY6_929KAA_2HOM_BWGDT%3Fpc%3Dhttp%253A%252F%252Fitem.rakuten.co.jp%252Fride-on%252F08marui366%252F%26m%3Dhttp%253A%252F%252Fm.rakuten.co.jp%252Fride-on%252Fi%252F10032226%252F" target="_blank" rel="nofollow"><img border="0" alt="" src="https://thumbnail.image.rakuten.co.jp/@0_mall/ride-on/cabinet/topeak/08marui366.jpg?_ex=300x300" /></a></td><td style="font-size:12px; vertical-align:middle; border-style:none; padding:10px;"><p style="padding:0; margin:0;"><a href="https://rpx.a8.net/svt/ejp?a8mat=2ZVUY6+929KAA+2HOM+BWGDT&rakuten=y&a8ejpredirect=http%3A%2F%2Fhb.afl.rakuten.co.jp%2Fhgc%2Fg00pr9s4.2bo117dc.g00pr9s4.2bo12e50%2Fa18120549492_2ZVUY6_929KAA_2HOM_BWGDT%3Fpc%3Dhttp%253A%252F%252Fitem.rakuten.co.jp%252Fride-on%252F08marui366%252F%26m%3Dhttp%253A%252F%252Fm.rakuten.co.jp%252Fride-on%252Fi%252F10032226%252F" target="_blank" rel="nofollow">【20%OFF】 トピーク ボトルケージ モジュラー ケージ EX[WBC034]【TOPEAK】</a></p><p style="color:#666; margin-top:5px line-height:1.5;">価格:<span style="font-size:14px; color:#C00; font-weight:bold;">691円</span><br/><span style="font-size:10px; font-weight:normal;">(2018/12/15 02:27時点)</span><br/><span style="font-weight:bold;">感想(5件)</span></p></td></tr></table>
 <img border="0" width="1" height="1" src="https://www16.a8.net/0.gif?a8mat=2ZVUY6+929KAA+2HOM+BWGDT" alt="">
-
-それでは。
