Siluroのリンクを追加

--- a/content/blog/2018/12/03.md
+++ b/content/blog/2018/12/03.md
@@ -62,3 +62,8 @@ Java BikesというメーカーのSiluro2 2018年モデルです。
 
 それでは。
 
+<a href="https://s.click.aliexpress.com/e/Rbcpn1Q" target="_blank">AliExpress.com Product - 2017 JAVA SILURO Road Bike 700C Aluminium Frame with Carbon Fork SORA 3000 18 Speed Aero Racing Bicycle</a>
+
+↑まだ2017モデルが売ってて、こっちの方が本体も送料も微妙に安い。が、Soraが新型じゃないんだよなぁ。
+
+自分が購入したのは[JAVA Siluro Bikes Unisex Road Bike SORA R3000 18 Speed Aluminum Alloy Road Bicycle Carbon Fork-in Bicycle from Sports & Entertainment on Aliexpress.com | Alibaba Group](https://www.aliexpress.com/item/2017-New-JAVA-Unisex-road-Bike-SORA-3500-18-Speed-Aluminum-Alloy-Road-Bicycle-Carbon-Fork/32794683637.html?spm=2114.search0604.3.3.d529ecf21KoGk9&ws_ab_test=searchweb0_0,searchweb201602_5_10065_10068_319_10059_10884_317_10887_10696_100031_321_322_10084_453_10083_454_10103_10618_10307_538_537_536,searchweb201603_51,ppcSwitch_0&algo_expid=07ec16ea-5c78-4982-b5ef-37562da04f93-0&algo_pvid=07ec16ea-5c78-4982-b5ef-37562da04f93)です。
