今日気になったニュース書いた

--- a/content/blog/2018/12/21-042005.md
+++ b/content/blog/2018/12/21-042005.md
@@ -4,7 +4,7 @@ date: 2018-12-21T16:20:11+09:00
 categories:
   - まとめ
 tags:
-  - 
+  - ゲーム
 image: https://s3-ap-northeast-1.amazonaws.com/t4traw/ss/2018-12-14_17-12-35.png
 ---
 2018年12月21日の気になったニュースやページ、動画やほしいものなどまとめ。
