パンクした時の記事書いた

--- a/content/blog/2018/12/03.md
+++ b/content/blog/2018/12/03.md
@@ -13,7 +13,9 @@ image: https://s3-ap-northeast-1.amazonaws.com/t4traw/ss/IMG_2476.png
 
 <!--more-->
 
-で、色々調べたり相談したりして、ようやくロードバイクを購入しました！
+追記: 購入から/届いてから/乗りだしてから……、なかなかにトラブル続いています。まあそれも含め面白がっていますが、やっぱロードの海外通販は大変です。周りに乗っている人がいないならたしかにオススメできませんね。素直にお店で買いましょう。
+
+---
 
 Java BikesというメーカーのSiluro2 2018年モデルです。
 
