--- a/content/blog/2018/12/26-092059.md
+++ b/content/blog/2018/12/26-092059.md
@@ -15,7 +15,7 @@ image: https://s3-ap-northeast-1.amazonaws.com/t4traw/ss/2018-12-26_10-06-48.png
 
 「あーパンクしたかー」思ったよりも早いパンク。まあパンクは運だもんね。3000km走ってまったくしない人もいれば、200kmで2回する人だっている。
 
-しかし、僕はもしもパンクした時のためにちゃんと替えのチューブとCO2インフレーターを持っている！パンクはいつか必ずするだろうから、事前に交換の練習もしておいたのだ！機械等を手に入れたら、まず分解してみたくなる正確だから、自転車も当然バラして遊び済み。
+しかし、僕はもしもパンクした時のためにちゃんと替えのチューブとCO2インフレーターを持っている！パンクはいつか必ずするだろうから、事前に交換の練習もしておいたのだ！機械等を手に入れたら、まず分解してみたくなる性格だから、自転車も当然バラして遊び済み。
 
 というわけで、さっそくブレーキを開放し、クイックリリースを緩め、リアホイールを外す。やっぱ高圧なだけにパンクすると大きい音が鳴るなぁすごいな、と先ほどの音の余韻を脳内プレイバックしながら、口にくわえたライトでホイールの表面を照らしながらくるくる回す。
 
