全画面にかんする追記

--- a/content/blog/2019/01/17-090646.md
+++ b/content/blog/2019/01/17-090646.md
@@ -166,6 +166,8 @@ body #app .slides .description {
 
 ちょっとgifアニだとフェイドインがうまくキャプチャできないのですが、いい感じに動いています。
 
+あとはF11などの全画面化をすることでディスプレイいっぱいに表示することが可能です。
+
 ---
 
 こんな感じでサクっと特別なソフトやコードを書かずに実装できました。
