--- a/content/blog/2019/03/07-085119.md
+++ b/content/blog/2019/03/07-085119.md
@@ -14,7 +14,7 @@ image: https://s3-ap-northeast-1.amazonaws.com/t4traw/ss/2019-03-07_11-58-15.png
 
 本好きの下剋上は、今では単行本やコミカライズされて売っていますが、もともとは[小説家になろうで連載](https://ncode.syosetu.com/n4830bu/)されていた作品で、自分もそちらで（正確にはそれをKindle向けに変換して）読みました。
 
-読んで最後は泣いたけど、「この作品で出会えてよかったぁ」とはちょっと言えない感じ。
+読んで最後は泣いたけど、「この作品に出会えてよかったぁ」とはちょっと言えない感じ。
 
 ## 本好きの"下剋上"？
 
@@ -30,13 +30,15 @@ image: https://s3-ap-northeast-1.amazonaws.com/t4traw/ss/2019-03-07_11-58-15.png
 
 ラストシーンは確かに涙がでました。が、「長い物語を読んできたから」泣けた感があったのも事実。もうちょっと作品をコンパクトにできたんじゃないかなぁ。中弛みしていた部分は割とあったし。んでも日常系な雰囲気で長めに書くのは、少しずつ更新していく"なろう系"小説の特徴なのかも。
 
-それと、平民との繋がりが薄くなるのはわかるんだけど、途中からまったく見えなくなったのが残念だったなと。平民を巻き込んだり、平民出身ならではの事をもっとやってほしかった。それがあったら最後のフィナーレに向かうシーンがもっともっと感動できたかな。
+それと、平民との繋がりが薄くなるのはわかるんだけど、途中からまったく見えなくなったのが残念だったなと。平民を巻き込んだり、平民出身ならではの事をもっとやってほしかった。それがあったら最後のフィナーレに向かうシーンがもっともっと感動できたかな。そういう意味では最後のページはすっごく良かった。
 
 平民で思いだした。領主様は変人という括りで誤魔化されそうだけど、平民に対する態度や対応がぶれ過ぎ。もっと良い人で良かったよぉ。
 
 ---
 
 と、色々書いたけど最後まで読んだって事はなかなか面白かったからです。ファンも多いし、ハマる人は結構ハマる作品だと思います。
+
+読み終わった後に、名残惜しくいろいろな場所を読み返したりしてるから、かなり世界観には浸っていたかも。ロスっぽい物もあります。
 
 それでは。
 
