--- a/content/blog/2019/03/25-114316.md
+++ b/content/blog/2019/03/25-114316.md
@@ -10,8 +10,7 @@ tags:
   - ポケカ
   - メタグロス
   - ルカリオ＆メルメタルGX
-image: 
-draft: true
+image: https://s3-ap-northeast-1.amazonaws.com/t4traw/ss/2019-03-26_17-36-06.png
 ---
 ポケモンカードゲーム、家族と遊べれば良いなぁぐらいだったのですが、身内でも「面白そうじゃん」という声があり、近所の仲が良い子供達にも伝染させてプレイヤー増幅計画を実行しようかと思います。
 
@@ -19,11 +18,17 @@ draft: true
 
 さて、いろんな人達と対戦していく事になりそうなんですが、やはり一応ゲーマー＆一応カードゲーム経験者としては、そう簡単に負けられません。少しデッキを強化することに。
 
-## 元々のデッキ内容
+## デッキ　ビフォーアフター
 
 元々のデッキの中身がこんな感じです。
 
 [![](https://www.pokemon-card.com/deck/deckView.php/deckID/caxcYa-4rXwYJ-488c88.png)](https://www.pokemon-card.com/deck/confirm.html/deckID/caxcYa-4rXwYJ-488c88/)
+
+で、こんな具合に強化しました。
+
+[![](https://www.pokemon-card.com/deck/deckView.php/deckID/ESy2XR-ypK1zj-ppX3MM.png)](https://www.pokemon-card.com/deck/confirm.html/deckID/ESy2XR-ypK1zj-ppX3MM?viewMode=image)
+
+## 改造のポイント
 
 スターターデッキの初期状態で3種類（残り2つはゼルネアス＝フェアリーと超＝ミュウツー）の中では一番強かったです。
 
@@ -107,11 +112,15 @@ GXワザを使えば、試合中全てのワザダメージを-30できます。
 
 ## 気になるメタグロスGX
 
-さて、ここで気になるのがメタグロスGXちゃん。ネクロズマたそがれのたてがみGXのメテオテンペスト<i class="ptcg-e m">M</i><i class="ptcg-e m">M</i><i class="ptcg-e m">M</i><i class="ptcg-e c">C</i>を安定して使うためにｍ本当はメタグロス2体をベンチに入れておきたいんだよなぁ。でもそうするとかなりポケモンの数が多いような……。2進化なので、ふしぎなアメの数も4つで足りるか？という心配もある。
+さて、ここで気になるのがメタグロスGXちゃん。ネクロズマたそがれのたてがみGXのメテオテンペスト<i class="ptcg-e m">M</i><i class="ptcg-e m">M</i><i class="ptcg-e m">M</i><i class="ptcg-e c">C</i>を安定して使うために、本当はメタグロス2体をベンチに入れておきたいんだよなぁ。となるとデッキには3枚積みたい所。でもそうするとかなりポケモンの数が多いような……。2進化なので、ふしぎなアメの数も4つで足りるか？という心配もある。
 
 もしもベンチでのサポート運用ならアローラダグトリオとかぶってしまうので、アローラダグトリオを抜くかなぁ。
 
 このあたりは調整ですね。そもそも100%勝ちにいくデッキではなく、周りといい勝負できる程度の強いデッキですし。
 
-
-
+<div class="amazfy">
+<a href="https://www.amazon.co.jp/dp/B07KYWRWKY?tag=t4traw-22">
+<img src="https://ws-fe.amazon-adsystem.com/widgets/q?_encoding=UTF8&ASIN=B07KYWRWKY&Format=_SL250_&ID=AsinImage&MarketPlace=JP&ServiceVersion=20070822&WS=1&tag=t4traw-22&language=ja_JP">
+<p>ポケモンカードゲーム サン&ムーン 強化拡張パック「 ジージーエンド」 BOX</p>
+</a>
+</div>
