カード追加分を追記

--- a/content/blog/2019/03/29-085104.md
+++ b/content/blog/2019/03/29-085104.md
@@ -51,3 +51,16 @@ draft: true
 
 バトルポケモンにエネルギーが多めにつくデッキタイプなので、きぜつした時のケアにねがいのバトンを採用。
 
+## 追記: エルフーンGXを追加
+
+エルフーンがすごくかわいいので、モンメンとエルフーンGXを追加しました。
+
+## ワンダーラビリンスを追加
+
+近所のカードショップでお安くワンダーラビリンスを購入できたので、ワンダーラビリンスを追加しました。
+
+## 強化総額
+
+- サーナイトGX*2（360円）
+- キルリア*2（160円）
+- 
