--- a/content/blog/2019/03/29-085104.md
+++ b/content/blog/2019/03/29-085104.md
@@ -8,8 +8,7 @@ tags:
   - カードゲーム
   - tcg
   - ポケカ
-image: 
-draft: true
+image: https://s3-ap-northeast-1.amazonaws.com/t4traw/ss/2019-04-02_14-43-12.png
 ---
 さて、自分のデッキを強化したので子どもたちのデッキの強化をします。まずはゼルネアスちゃんの入ったGXスタートデッキ ゼルネアスを強化したいのですが……。これがね、もうメタグロスと違ってゼルネアス感がまるでない感じになっています。
 
@@ -25,9 +24,11 @@ draft: true
 
 ## ラルトス->キルリア->サーナイトGX
 
+<img src="https://www.pokemon-card.com/assets/images/card_images/large/SM8b/035552_P_SANAITOGX.jpg" class="tcg-card">
+
 まず、ラルトスがあるのに進化先のサーナイトが無い。~~ゼルネスの代わりにサーナイトGXくれよ~~。
 
-というわけで、サーナイトGXを2枚ほど買い足し（180円*2）、エネルギーをたくさんつけて『インフィニットフォース』で殴るのを方針にしようと思いました。
+というわけで、サーナイトGXを2枚ほど買い足し、エネルギーをたくさんつけて『インフィニットフォース』で殴るのを方針にしようと思いました。
 
 ## エネ加速手段はマリルリで
 
@@ -35,13 +36,19 @@ draft: true
 
 アブリーが入っているので、アブリボンを買い足して『みつあつめ』（山札から2枚基本エネサーチして手札に加える）も良さそうだなー。アブリボン可愛いし。
 
+<img src="https://www.pokemon-card.com/assets/images/card_images/large/SM3H/033902_P_ABURIBON.jpg" class="tcg-card">
+
 と思ったら、アブリボンちゃん**1枚600円から1000円する**。1枚でスタートデッキ１，２個変えるやんｗ とても2-3枚集めてらんないｗ
 
-どうしようかなー。これ買うなら おじょうさま（1枚あたり350-500円くらい） とか買った方が子供は分かりやすいかもなぁ。~~アブリボンより安いし~~。と思ったらめっちゃ面白いやつみつけました。マリルリです。
+どうしようかなー。これ買うなら おじょうさま（1枚あたり350-500円くらい） とか買った方が子供は分かりやすいかもなぁ。~~アブリボンより安いし~~。と思ったらめっちゃ面白いやつみつけました。**マリルリ**です。
+
+<img src="https://www.pokemon-card.com/assets/images/card_images/large/SM8/035355_P_MARIRURI.jpg" class="tcg-card">
 
 『みずたまさがり』はワザなので、アブリボンのように特性ではないので確かに利便性は落ちるのですが、「自分の山札を上から8枚見て、その中にあるエネルギーを好きなだけ、自分のポケモンに好きなようにつける。」なので、超加速エネルギーとかの特殊エネルギーも対象と。それをポケモンに直接付けられるというのが面白い。やってみると普通に3-5エネルギーは一度につけられる。
 
 ## キュワワーはかわいいので続投
+
+<img src="https://www.pokemon-card.com/assets/images/card_images/large/SMH/035123_P_KYUWAWA.jpg" class="tcg-card">
 
 娘は「キュワワーはかわいいのでぜったい抜かない」と言っていたので、キュワワーは続投です。モンスターボールでサーチできる特殊状態回復＆無効なので、1枚ピン刺しも許されるでしょう。
 
@@ -49,18 +56,40 @@ draft: true
 
 ## ねがいのバトンでエネルギーロストをケア
 
+<img src="https://www.pokemon-card.com/assets/images/card_images/large/SMN/036450_T_NEGAINOBATON.jpg" class="tcg-card">
+
 バトルポケモンにエネルギーが多めにつくデッキタイプなので、きぜつした時のケアにねがいのバトンを採用。
 
 ## 追記: エルフーンGXを追加
 
+<img src="https://www.pokemon-card.com/assets/images/card_images/large/SM10/036385_P_ERUFUNGX.jpg" class="tcg-card">
+
 エルフーンがすごくかわいいので、モンメンとエルフーンGXを追加しました。
 
-## ワンダーラビリンスを追加
+## 追記: ワンダーラビリンスを追加
+
+<img src="https://www.pokemon-card.com/assets/images/card_images/large/SM8b/035605_T_WANDARABIRINSU.jpg" class="tcg-card">
 
 近所のカードショップでお安くワンダーラビリンスを購入できたので、ワンダーラビリンスを追加しました。
 
-## 強化総額
+## シングル強化総額
 
 - サーナイトGX*2（360円）
 - キルリア*2（160円）
-- 
+- エルフーンGX（200円）
+- ワンダーラビリンス（250円）
+- グズマ（300円）
+- ねがいのバトン（150円）
+- マリル\*4、マリルリ\*4（300円）
+
+といったところでしょうか。ブルーの探索などはパックを剥いてでてきたのでシングル換算していません。
+
+とりあえず初期デッキよりかなり勝ち筋が分かりやすいデッキになりました。
+
+課題としては、火力を出す方法がGXカードに完全依存しているため、アンチGXなカード……例えばフーパ1枚で完封されるところです。
+
+<img src="https://www.pokemon-card.com/assets/images/card_images/large/SM8b/035534_P_FUPA.jpg" class="tcg-card">
+
+そのためにもう少しデッキの内容を考えたいところですが、ひとまずはこの状態で。子供が自分で「あのデッキに対策するには……」といった具合に考える楽しみがありますからね。
+
+それでは。
