モルフォンGXデッキの記事かいた

--- a/content/blog/2019/04/17-100311.md
+++ b/content/blog/2019/04/17-100311.md
@@ -11,7 +11,6 @@ tags:
   - カイリュー
   - ピジョン
 image: https://s3-ap-northeast-1.amazonaws.com/t4traw/ss/2019-04-17_10-05-49.png
-draft: true
 ---
 しばらく改造していた鋼デッキですが、公式でオススメされているから買ってみたGXスタートデッキをベースに改造していました。
 
@@ -21,7 +20,7 @@ draft: true
 
 ## 初めて出たGXカード『モルフォンGX』をもとに作ってみる
 
-ポケモンカードを始めて、初めて出会えたGXカードがモルフォンGXでした（正確にいうと娘が出したのですが）。
+ポケモンカードを始めて、初めて出会えたGXカードが`モルフォンGX`でした（正確にいうと娘が出したのですが）。
 
 <img src="https://www.pokemon-card.com/assets/images/card_images/large/SM9a/036147_P_MORUFONGX.jpg" class="tcg-card">
 
@@ -31,29 +30,29 @@ draft: true
 
 ![](https://www.pokemon-card.com/deck/deckView.php/deckID/2XpMMy-Xd4IRJ-2ypM3R.png)
 
-モルフォンGXは『キョウの罠』と『アンズ』が必須。で、サポートをサーチするのカードを探したら、最近のタッグボルトに収録されているカイリューがいるじゃないですか。
+モルフォンGXは`キョウの罠`と`アンズ`が必須。で、サポートをサーチするのカードを探したら、最近のタッグボルトに収録されている`カイリュー`がいるじゃないですか。
 
 <img src="https://www.pokemon-card.com/assets/images/card_images/large/SM9/036009_P_KAIRYU.jpg" class="tcg-card">
 
-カイリューは、僕が初代ポケモン赤緑で最後のパーティーにいたポケモンで、非常に思い入れのあるポケモンでもあります。ちなみにモルフォンもパーティにいた事がありました。
+`カイリュー`は、僕が初代ポケモン赤緑で最後のパーティーにいたポケモンで、非常に思い入れのあるポケモンでもあります。ちなみにモルフォンもパーティにいた事がありました。
 
-さらに、公式のモルフォンGXデッキでも採用しているポッポ-ピジョンも採用してみました。
+さらに、公式のモルフォンGXデッキでも採用している`ポッポ`-`ピジョン`も採用してみました。
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/_DwEE700oCk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 ![](https://s3-ap-northeast-1.amazonaws.com/t4traw/ss/2019-04-17_12-36-46.png)
 
-クリーチャーズ井上さんのレシピは、まだカイリューがいなかった環境なので、こうなっていますが、このピジョンは何回か回してみて必須だなと思いました。
+クリーチャーズ井上さんのレシピは、まだ`カイリュー`がいなかった環境なので、こうなっていますが、この`ピジョン`は何回か回してみて必須だなと思いました。
 
-というのも、キョウの罠とアンズをほぼ毎ターン使いたいので、リーリエやシロナといったドローサポートが積めません。そこをカバーするサポートポケモンとグッズが必須です。
+というのも、`キョウの罠`と`アンズ`をほぼ毎ターン使いたいので、`リーリエ`や`シロナ`といったドローサポートが積めません。そこをカバーするサポートポケモンとグッズが必須です。
 
-で、ドローサポートのポケモンというと真っ先に思いつくのがゾロアークGXです。
+で、ドローサポートのポケモンというと真っ先に思いつくのが`ゾロアークGX`です。
 
 <img src="https://www.pokemon-card.com/assets/images/card_images/large/SM3p/034050_P_ZOROAKUGX.jpg" class="tcg-card">
 
-しかし、これやってみると、上にある理由と同じで『グズマ』が入れられないので『カスタムキャッチャー』を握っておきたい。『キョウの罠』や『アンズ』はキープしておかないとまずい。などなど、簡単に捨てるカードがないことが結構ありました。
+しかし、これやってみると、上にある理由と同じで`グズマ`が入れられないので`カスタムキャッチャー`を握っておきたい。`キョウの罠`や`アンズ`はキープしておかないとまずい。などなど、簡単に捨てるカードがないことが結構ありました。
 
-それなら、ピジョンだったら最悪『キョウの罠』『アンズ』は山札に戻しておいてカイリューで持ってこれるし、『ウツギ博士のレクチャー』で展開できるのもいいところ。
+それなら、`ピジョン`だったら最悪`キョウの罠`, `アンズ`は山札に戻しておいて`カイリュー`で持ってこれるし、`ウツギ博士のレクチャー`で展開できるのもいいところ。
 
 ## 一人回しして具合をみてみる
 
@@ -61,11 +60,11 @@ draft: true
 
 ![](https://s3-ap-northeast-1.amazonaws.com/t4traw/ss/2019-04-17_10-31-24.png)
 
-1回目。カイリューまで届かず。ただ2-3ターン目からはアンズを打ててはいるので、モルフォンGXデッキとしては動かせていました。
+1回目。`カイリュー`まで届かず。ただ2-3ターン目からは`アンズ`を打ててはいるので、`モルフォンGX`デッキとしては動かせていました。
 
 ![](https://s3-ap-northeast-1.amazonaws.com/t4traw/ss/2019-04-17_10-41-37.png)
 
-2回目。場は90点といったところか。代わりのモルフォンGXが持ってこれていないので、エスケープボードがポケモン通信だったら良かったか。カスタムキャッチャーも2枚握れてないですね。
+2回目。場は90点といったところか。代わりの`モルフォンGX`が持ってこれていないので、`エスケープボード`が`ポケモン通信`だったら良かったか。`カスタムキャッチャー`も2枚握れてないですね。
 
 ![](https://s3-ap-northeast-1.amazonaws.com/t4traw/ss/2019-04-17_10-44-52.png)
 
@@ -77,51 +76,53 @@ draft: true
 
 ![](https://s3-ap-northeast-1.amazonaws.com/t4traw/ss/2019-04-17_12-39-39.png)
 
+5回目。`カスタムキャッチャー`があと1枚あれば完璧か。
+
 ### 回してみてわかった要らないカードたち
 
 #### ルザミーネ
 
-おそらく実際の対戦になったらルザミーネでサポートを回収して次のターンで使ってー……なんて余裕はなさそう。ほぼ『アンズ』を使っていると思う。なので、これはやはり『ともだちてちょう』に変えた方が強いと思う。
+おそらく実際の対戦になったら`ルザミーネ`でサポートを回収して次のターンで使ってー……なんて余裕はなさそう。ほぼ`アンズ`か`キョウの罠`を使っていると思う。なので、これはやはり`ともだちてちょう`に変えた方が強いと思う。
 
 #### エスケープボード、ポケモン交換
 
-枠が余ったからなんとなく入れたけど、システムポケモンが多いので頻繁に変わる事がないから100%必要ないカード。まだ『あなぬけのひも』とかの方が良い。同じ理由でポケモン交換もいらない。
+枠が余ったからなんとなく入れたけど、システムポケモンが多いので頻繁に変わる事がないから100%必要ないカード。まだ`あなぬけのひも`とかの方が良い。同じ理由で`ポケモン交換`もいらない。
 
 ### 回してみてわかった足りないカードたち
 
 #### ポケモン通信
 
-ドローサポートがないので、軌道にのるまで辛い。何が辛いってポケモンをサーチする手段がきつい。モルフォン・カイリューは進化ポケモンなのに草と龍だから共通のサーチ手段がない。ミニリュウがウツギでサーチできない。
+ドローサポートがないので、軌道にのるまで辛い。何が辛いってポケモンをサーチする手段がきつい。`モルフォン`, `カイリュー`は進化ポケモンなのに草と龍だから共通のサーチ手段がない。`ミニリュウ`が`ウツギ博士のレクチャー`でサーチできない。
 
-で、あったら良いなと思ったのが『ポケモン通信』。
+で、あったら良いなと思ったのが`ポケモン通信`。
 
 <img src="https://www.pokemon-card.com/assets/images/card_images/large/SM9/036026_T_POKEMONTSUUSHIN.jpg" class="tcg-card">
 
-今は要らないけどあとで必要になるかもなカード（コンパン3匹目やミニリュウ2匹目など）を、いったん山札に戻して必要なポケモンを持ってこれる。ちょっと試してみたいです。
+今は要らないけどあとで必要になるかもなカード（`コンパン`3匹目や`ミニリュウ`2匹目など）を、いったん山札に戻して必要なポケモンを持ってこれる。ちょっと試してみたいです。
 
 #### サブアタッカー
 
-今の所アタッカーがGXしかいないので、フーパやアローラキュウコンが出てきた瞬間詰みます。
+今の所アタッカーがGXしかいないので、`フーパ`や`アローラキュウコン`が出てきた瞬間詰みます。
 
 <img src="https://www.pokemon-card.com/assets/images/card_images/large/SM8b/035534_P_FUPA.jpg" class="tcg-card">
 
-なので、グライガーを持っていたので入れてみましたが、ワザを使うのに最低3エネ……重くない？。
+なので、`グライガー`を持っていたので入れてみましたが、ワザを使うのに最低3エネ……重くない？。
 
-アローラキュウコンはHP110点。フーパはHP120。火力が出すには……お、この子いいじゃない！アローラベトベター！
+`アローラキュウコン`はHP110点。`フーパ`はHP120。火力が出すには……お、この子いいじゃない！`アローラベトベター`！
 
 <img src="https://www.pokemon-card.com/assets/images/card_images/large/SM8a/035417_P_ARORABETOBETA.jpg" class="tcg-card">
 
-キョウの罠でどく・こんらんになるので、20+(50*2)で120点。その後すぐにポケモンチェックで10点入るので130点入る！……と思ったけど、HP70なのでフーパから1パンできぜつしてしまう。
+`キョウの罠`でどく・こんらんになるので、20+(50*2)で120点。その後すぐにポケモンチェックで10点入るので130点入る！……と思ったけど、HP70なので`フーパ`から1パンできぜつしてしまう。
 
-だったらいっそガルーラとか
+だったらいっそ`ガルーラ`とか
 
 <img src="https://www.pokemon-card.com/assets/images/card_images/large/SM9/036018_P_GARURA.jpg" class="tcg-card">
 
-ピジョンの進化先であるピジョットを1枚ピン刺しするとか
+`ピジョン`の進化先である`ピジョット`を1枚ピン刺しするとか
 
 <img src="https://www.pokemon-card.com/assets/images/card_images/large/SM9/036014_P_PIJOTTO.jpg" class="tcg-card">
 
-もしくはこちらも特性をメタりにメレシーとか
+もしくはこちらも特性をメタりに`メレシー`とか
 
 <img src="https://www.pokemon-card.com/assets/images/card_images/large/SM7b/035269_P_MERESHI.jpg" class="tcg-card">
 
