--- a/content/blog/2019/05/01-085858.md
+++ b/content/blog/2019/05/01-085858.md
@@ -49,7 +49,7 @@ image: https://s3-ap-northeast-1.amazonaws.com/t4traw/ss/20190501-091653.png
 
 ## 以前から計画していた、レゲー攻略をしようかな
 
-実は以前から幼少期にクリアできなかったゲームをクリアしていくチャレンジをしようと計画していました。それを本格的にやってみようかな、なんて思わされました。令和だし（向かんか家）。
+実は以前から幼少期にクリアできなかったゲームをクリアしていくチャレンジをしようと計画していました。それを本格的にやってみようかな、なんて思わされました。令和だし（無関係）。
 
 とりあえず、懐かしすぎてSwitchのカプコン ベルトアクションコレクションを購入しました。しばらくはファイナルファイトと、やった事ない天地を喰らうをプレイしたいと思います。
 
