--- a/content/blog/2019/05/01-085858.md
+++ b/content/blog/2019/05/01-085858.md
@@ -58,4 +58,10 @@ image: https://s3-ap-northeast-1.amazonaws.com/t4traw/ss/20190501-091653.png
 <img src="https://ws-fe.amazon-adsystem.com/widgets/q?_encoding=UTF8&ASIN=B07LCZ8V36&Format=_SL250_&ID=AsinImage&MarketPlace=JP&ServiceVersion=20070822&WS=1&tag=t4traw-22&language=ja_JP">
 <p>ハイスコアガール EXTRA STAGE</p>
 </a>
+
+</div><div class="amazfy">
+<a href="https://www.amazon.co.jp/dp/B07FK8CZX3?tag=t4traw-22">
+<img src="https://ws-fe.amazon-adsystem.com/widgets/q?_encoding=UTF8&ASIN=B07FK8CZX3&Format=_SL250_&ID=AsinImage&MarketPlace=JP&ServiceVersion=20070822&WS=1&tag=t4traw-22&language=ja_JP">
+<p>ストリートファイター 30th アニバーサリーコレクション インターナショナル</p>
+</a>
 </div>
