メインイメージを追加

--- a/content/blog/2017/11/09.md
+++ b/content/blog/2017/11/09.md
@@ -7,7 +7,7 @@ tags:
   - mac
   - tools
   - monosnap
-image:
+image: https://s3-ap-northeast-1.amazonaws.com/t4traw/ss/20190507-105856.png
 ---
 MacのスクリーンキャプチャAppをSkitchから[Monosnap](//monosnap.com/welcome)に変更しました。キャプチャと編集とS3へのアップロード全て快適で、非常に満足しています。
 
