draftじゃなかったorza

--- a/content/blog/2019/05/10-090000.md
+++ b/content/blog/2019/05/10-090000.md
@@ -6,6 +6,7 @@ categories:
 tags:
   - 
 image: https://s3-ap-northeast-1.amazonaws.com/t4traw/ss/20190509-115418.png
+draft: true
 ---
 実際にAppを作っていきます。
 
