前回へのリンクを追加

--- a/content/blog/2019/05/10-150000.md
+++ b/content/blog/2019/05/10-150000.md
@@ -9,6 +9,8 @@ tags:
   - vue
 image: https://s3-ap-northeast-1.amazonaws.com/t4traw/ss/20190509-115418.png
 ---
+前回の記事はこちら: [Google Firebaseに入門してみた\[0\] – すきなものをすきといえるせかいにしたい](https://www.t4traw.net/blog/2019/05/google-firebase%E3%81%AB%E5%85%A5%E9%96%80%E3%81%97%E3%81%A6%E3%81%BF%E3%81%9F0/)
+
 実際にFirebaseのデータベースにつないで、読み書きをしてみます。
 
 App側はVue.jsを使うことにしました。Nuxt.jsを考えましたが、薄く軽く作る予定なので、シンプルにVue.jsで作ってみることにしました。
