--- a/content/blog/2018/05/18.md
+++ b/content/blog/2018/05/18.md
@@ -7,7 +7,7 @@ categories:
 tags:
   - rails
   - vue
-image: 
+image: https://s3-ap-northeast-1.amazonaws.com/t4traw/ss/20190513-160122.png
 ---
 Rails+Vueのコードを書いていて、scopedなstyleを書いても効かない問題に遭遇しました。
 
