--- a/content/blog/2018/06/07.md
+++ b/content/blog/2018/06/07.md
@@ -12,7 +12,7 @@ tags:
   - docker
   - minitest
   - headless_chrome
-image: 
+image: https://s3-ap-northeast-1.amazonaws.com/t4traw/ss/20190513-160002.png
 ---
 GitHubがMicrosoftに買収されて、GitLabに移行するのがブーム(🏄❓)になっています。
 
