--- a/content/blog/2018/08/06.md
+++ b/content/blog/2018/08/06.md
@@ -10,7 +10,7 @@ tags:
   - lambda
   - json
   - yahoo
-image: 
+image: https://s3-ap-northeast-1.amazonaws.com/t4traw/ss/20190513-155402.png
 ---
 ECDOの新着情報の自動生成機能を作成中、APIで新着情報を取得する前提でいましたが、YahooショッピングAPIにそんなものは提供されていませんでした😢 (普段は社内の機関システムから新着商品を取得しているし、当然あるものだと思いこんでいた)
 
