--- a/content/blog/2018/08/20.md
+++ b/content/blog/2018/08/20.md
@@ -6,7 +6,7 @@ categories:
 tags:
   - rails
   - banken
-image:
+image: https://s3-ap-northeast-1.amazonaws.com/t4traw/ss/20190513-155237.png
 ---
 このユーザーはコレができて、あのユーザーはアレができないなどといった、ユーザーのロール毎に権限管理をすることができるgem [banken](https://github.com/kyuden/banken)を試してみました🙋
 
