--- a/content/blog/2018/09/11.md
+++ b/content/blog/2018/09/11.md
@@ -7,7 +7,7 @@ tags:
   - rails
   - active_job
   - sidekiq
-image:
+image: https://s3-ap-northeast-1.amazonaws.com/t4traw/ss/20190513-155646.png
 ---
 Railsで何か作る時、ほぼバックグランド処理を毎回作っているので、初期テンプレートに加えようと決意した今日このごろ。Rails4.2から導入されているActiveJobとSidekiq、そしてそれをcronのように定期実行してくれるsidekiq-schedulerに関するメモを書いておきます📝
 
