--- a/content/blog/2018/07/26.md
+++ b/content/blog/2018/07/26.md
@@ -10,7 +10,7 @@ tags:
   - nginx
   - puma
   - rails
-image: 
+image: https://s3-ap-northeast-1.amazonaws.com/t4traw/ss/20190513-155518.png
 ---
 先日公開した[ecdo](https://ecdoapp.com/)、とりあえずherokuにデプロイしていたのですが、諸事情により国内VPSに引っ越しする必要がありました🚚
 
