イメージを追加

--- a/content/blog/2016/03/10.md
+++ b/content/blog/2016/03/10.md
@@ -8,8 +8,14 @@ tags:
   - パスワード
   - lastpass
   - keychain
-image:
+image: https://s3-ap-northeast-1.amazonaws.com/t4traw/ss/20190513-163933.png
 ---
+## 2019年5月13日現在
+
+chromeで使いたかったり、機密メモの同期ができなかったり、iOSも無料でTouchIDでパスワード入力できるようになったので、Lastpassに再度戻りました。
+
+---
+
 パスワード管理をLastpassからiCloud keychainに変えた時のお話です。
 
 <!--more-->
