--- a/content/blog/2016/06/24.md
+++ b/content/blog/2016/06/24.md
@@ -7,8 +7,16 @@ tags:
   - zsh
   - oh-my-zsh
   - prezto
-image:
+image: https://s3-ap-northeast-1.amazonaws.com/t4traw/ss/20190513-163601.png
 ---
+## ※2019年5月13日追記
+
+2019年5月現在はhyper+zshだけでシンプルに使うようにしています。
+
+[ターミナルをiTerm2からHyperに変更しました – すきなものをすきといえるせかいにしたい](http://localhost:1313/blog/2019/04/%E3%82%BF%E3%83%BC%E3%83%9F%E3%83%8A%E3%83%AB%E3%82%92iterm2%E3%81%8B%E3%82%89hyper%E3%81%AB%E5%A4%89%E6%9B%B4%E3%81%97%E3%81%BE%E3%81%97%E3%81%9F/)
+
+---
+
 ターミナルを軽量化したいと思い、なんとなくoh-my-zshを入れていたけど[prezto](https://github.com/sorin-ionescu/prezto)にzshフレームワークを変更してみた。
 
 <!--more-->
