--- a/content/blog/2019/05/15-120000.md
+++ b/content/blog/2019/05/15-120000.md
@@ -8,7 +8,7 @@ tags:
   - sorcery
   - slack
   - oauth
-image: http://t4traw.s3-ap-northeast-1.amazonaws.com/dropshare/Screen-Shot-2019-05-15-09-36-24.png
+image: https://t4traw.s3-ap-northeast-1.amazonaws.com/dropshare/Screen-Shot-2019-05-15-09-36-24.png
 ---
 ぼくが普段Railsのログイン周りは[Sorcery/sorcery](https://github.com/Sorcery/sorcery)というgemを使わせてもらっています。そのsorceryにTwitterやFacebookなどのアカウントを利用したログインができるexternalオプションがるのですが、Slackアカウントを使った認証を実装した時のメモを書いておきます。
 
