バージョン変える度にパーマリンク変わるので修正

--- a/content/blog/2018/02/06.md
+++ b/content/blog/2018/02/06.md
@@ -1,5 +1,5 @@
 ---
-title: middleman(4.3.4) + webpack(4.17.1)でモダンな静的サイトのテンプレートを作る
+title: middlemanとwebpackでモダンな静的サイトのテンプレートを作る
 date: 2018-02-06
 categories:
   - middleman
