コマンド修正

--- a/content/blog/2019/03/11-124730.md
+++ b/content/blog/2019/03/11-124730.md
@@ -290,7 +290,7 @@ app.getPath('userData')
 [electron-userland/electron-builder](https://github.com/electron-userland/electron-builder)
 
 ```
-$ node i electron-build
+$ npm i electron-build -D
 ```
 
 で、srcディレクトリの中にビルド用のスクリプトを作成します。
@@ -321,8 +321,7 @@ builder.build({
 ビルドする時に同梱したいパッケージなどがsrc/node_modulesに入っていないとダメなので注意してください。
 
 ```
-$ cd src
-$ node build-win
+$ node src/build-win
 ```
 
 これでdistディレクトリの中にexeが生成されていると思います。
