ゾロアークアーゴヨンデッキの記事かいた

--- a/content/blog/2019/07/11-044607.md
+++ b/content/blog/2019/07/11-044607.md
@@ -1,40 +1,94 @@
 ---
-title: 
+title: 『ゾロアークGX/アーゴヨンGX』デッキを作ってみた
 date: 2019-07-11T16:46:11+09:00
 categories:
-  - 
+  - pokemon-card
 tags:
-  - 
-image: 
-draft: true
+  - ポケモン
+  - カードゲーム
+  - tcg
+  - ポケカ
+  - ゾロアークGX
+  - アーゴヨンGX
+image: https://t4traw.s3-ap-northeast-1.amazonaws.com/dropshare/V6onRvY5Qm1MwNUp0KLZ93lvNr6cX2KR.jpg
 ---
-先日行われていたNAICで優勝したデッキ『ゾロアークアーゴヨンデッキ』を自分なりに組んでみたのですが、これがなかなか強くて面白かったので、自分のメインデッキ化しました。
+先日行われていたNAICで優勝したデッキ『ゾロアークGX/アーゴヨンGX』デッキを自分なりに組んでみたのですが、これがなかなか強くて面白かったので、自分のメインデッキ化しました。
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/okdDt-rZK_o" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+NAIC 2019のFinalはこのゾロアークGX/アーゴヨンGXとピカゼクでしたね。
 
 <!--more-->
+
+実際に大会で使われたデッキレシピがこちら。
+
+[![](https://www.pokemon-card.com/deck/deckView.php/deckID/9ggiHg-6lGkrc-Li6n9L.png)](https://www.pokemon-card.com/deck/result.html/deckID/9ggiHg-6lGkrc-Li6n9L/)
 
 勝ち筋としては、
 
 - 相手のタッグチームを一撃で倒せるまで場を整え、アーゴヨンGXのGXワザでサイドを3枚にして、一気にサイドを取りきって勝つ
-- シンプルにゾロアークGXのライオットビートで倒して勝つ
+- シンプルにゾロアークGXのライオットビート<i class="ptcg-e c">C</i><i class="ptcg-e c">C</i>で倒して勝つ
 
 といった感じです。
 
-このデッキを組むためにゾロアークGXを揃えたのですが、この子の安定感は素晴らしいですね。そりゃ世の中にルガゾロとかゾロアークコントロールとかでるわけだ。
+このデッキを組むためにゾロアークGXを揃えたのですが、この子の安定感は素晴らしいですね。そりゃ世の中にルガゾロやゾロアークコントロールとか流行ってるわけだ。
 
-さらにペルシアンGXのキャットウォークのおかげで、非常に安定して盤面を作ることができます。
+<img src="https://www.pokemon-card.com/assets/images/card_images/large/SM3p/034050_P_ZOROAKUGX.jpg" class="tcg-card">
+
+モルフォンGXデッキ作ったときのピジョンが好きだったので、この子も一気に好きなカードになりました。
+
+さらにペルシアンGXの特性キャットウォーク（前の相手の番に、自分の「ポケモンGX・EX」がきぜつしていたなら、自分の番に1回使える。自分の山札にある好きなカードを2枚まで、手札に加える。）のおかげで、非常に安定して盤面を作ることができます。
+
+<img src="https://www.pokemon-card.com/assets/images/card_images/large/SM10/036388_P_PERUSHIANGX.jpg" class="tcg-card">
 
 しかもこのデッキはどれだけサイドレースに負けていてもひっくり返せるので、心理的に楽だしプレイングも非常に楽しいです。
 
-元々のデッキレシピがこちら。
+---
 
-ジャッジマンが採用されていますが、今はリセットスタンプがあるのでそちらに変更。
+で、自分が作ってみたレシピがこちら。
 
-プレシャスボールがあるので、ネストボールやポケモン通信などのバランスを変更。けど、これ4枚積みしたいなぁ。
+[![](https://www.pokemon-card.com/deck/deckView.php/deckID/Kx88cx-GYnoP5-xcxYJx.png)](https://www.pokemon-card.com/deck/result.html/deckID/Kx88cx-GYnoP5-xcxYJx/)
 
-デデンネGXはもう少し回してみて、使わなかったら外すかもしれません。カプ・テテフGXからのウツギ博士の研究がやっぱ安定する気がします。
+ジャッジマンが採用されていましたが、今はリセットスタンプがあるのでそちらに変更。
 
-でもポケモンの数はこれ以上少なくしたくないんだよなぁ。最後の一撃をペルシアンGXのふくしゅうにするパターンもあるので。
+プレシャスボールがあるので、ネストボールやポケモン通信などのバランスを変更。ちょっと回してみて、プレシャスボールは、4枚積みしても良いかもしれません。……したいけど軍資金がなぁorz。（600-700円/プレシャスボール1枚）
 
-やはり入れるとしたら、アローラベトベトン『かがくのちから』なんだけど、これ入れるとなるとメタモンが欲しいんだよなぁ。メタモンたかすぎなりよ……。
+<img src="https://www.pokemon-card.com/assets/images/card_images/large/SMM/036859_T_PURESHASUBORU.jpg" class="tcg-card">
 
+~~デデンネGXはもう少し回してみて、使わなかったら外すかもしれません。~~ ウソです。めっちゃ使うシーンありました。選択肢があるというのは素晴らしいですね。
 
+<img src="https://www.pokemon-card.com/assets/images/card_images/large/SM9a/036161_P_DEDENNEGX.jpg" class="tcg-card">
+
+カプ・テテフGXからのウツギ博士のレクチャーがやっぱ安定するので、アセロラ外してウツギ博士のレクチャーを入れたい気分。でも1回しか使わない（それも序盤でしかほぼ使わない）カードを2枚は積めないなぁ。
+
+ジュゴンに関しては、自分の周りに火デッキが少ないのでそこまで重要じゃないかな？って思ったけど、相手がTAGじゃないGXや非GXの場合は2体同時に落とさないといけないので必要かな。
+
+<img src="https://www.pokemon-card.com/assets/images/card_images/large/SM10/036344_P_JUGON.jpg" class="tcg-card">
+
+スティンガーGX後のフィニッシュをペルシアンGXの「ふくしゅう<i class="ptcg-e c">C</i><i class="ptcg-e c">C</i><i class="ptcg-e c">C</i>」にするパターンもあるので、ポケモンの数はこれくらいがベスト。
+
+やはり入れるとしたら、アローラベトベトン『かがくのちから』なんだけど、これ入れならメタモンが欲しいんだよなぁ。メタモンたかすぎ（1枚2400円）なりよ……。アローラベトベトンも900円くらいだし……。
+
+<img src="https://www.pokemon-card.com/assets/images/card_images/large/SM4p/034263_P_ARORABETOBETON.jpg" class="tcg-card">
+
+<img src="https://www.pokemon-card.com/assets/images/card_images/large/SM7a/035204_P_METAMON.jpg" class="tcg-card">
+
+ベベノムはラストシーン<i class="ptcg-e p">P</i><i class="ptcg-e c">C</i><i class="ptcg-e c">C</i>（おたがいのサイドの残り枚数が、それぞれ1枚なら、130ダメージ追加。）を採用。
+
+<img src="https://www.pokemon-card.com/assets/images/card_images/large/SM10b/036687_P_BEBENOMU.jpg" class="tcg-card">
+
+あと、僕はゲームでの運が非常に悪いことで有名なので、グラジオは絶対に採用。試しに1人回しを6回してみたら3/6の確率でアーゴヨンGXがサイド落ち（うち1回はグラジオもアーゴヨンGXも同時に入ってた）していました。
+
+![](https://t4traw.s3-ap-northeast-1.amazonaws.com/dropshare/gWjJ2bRarbtwb0F6T6VuxDEKWkwK6dSS.jpg)
+▲息子との対戦。息子はブラッキー＆ダークライGXスターターデッキ
+
+しばらくこのデッキで対戦をしてみたいたと思います。
+
+それでは。
+
+<div class="amazfy">
+<a href="https://www.amazon.co.jp/dp/B07PQCV4P1?tag=t4traw-22">
+<img src="https://ws-fe.amazon-adsystem.com/widgets/q?_encoding=UTF8&ASIN=B07PQCV4P1&Format=_SL250_&ID=AsinImage&MarketPlace=JP&ServiceVersion=20070822&WS=1&tag=t4traw-22&language=ja_JP">
+<p>ポケモンカードゲーム サン＆ムーン 強化拡張パック「リミックスバウト」</p>
+</a>
+</div>
