画像をちょっと変更

--- a/content/blog/2019/05/22-085701.md
+++ b/content/blog/2019/05/22-085701.md
@@ -7,7 +7,7 @@ tags:
   - music
   - sora tob sakana
   - youtube
-image: https://t4traw.s3-ap-northeast-1.amazonaws.com/dropshare/GcYASCFSCBbD29JGFRRfyADqlrVTDPFc.png
+image: https://t4traw.s3-ap-northeast-1.amazonaws.com/dropshare/SCszuPDROcwWUMsJXb3ko6dMmIoZ9BEE.jpg
 ---
 最近ハマった『ハイスコアガール』のOP曲『New stranger』のアーティストsora tob sakanaの他の曲を聴いてみたらめっちゃくちゃ良かったです。
 
