--- a/content/blog/2019/03/29-085104.md
+++ b/content/blog/2019/03/29-085104.md
@@ -26,13 +26,13 @@ image: https://s3-ap-northeast-1.amazonaws.com/t4traw/ss/2019-04-02_14-43-12.png
 
 <img src="https://www.pokemon-card.com/assets/images/card_images/large/SM8b/035552_P_SANAITOGX.jpg" class="tcg-card">
 
-まず、ラルトスがあるのに進化先のサーナイトが無い。~~ゼルネスの代わりにサーナイトGXくれよ~~。
+まず、ラルトスがあるのに進化先のサーナイトがない。~~ゼルネアスGXの代わりにサーナイトGXくれよ~~。
 
 というわけで、サーナイトGXを2枚ほど買い足し、エネルギーをたくさんつけて『インフィニットフォース』で殴るのを方針にしようと思いました。
 
 ## エネ加速手段はマリルリで
 
-サーナイトGXの特性『ひみつのいずみ』で1ターンに2枚エネが貼れるのですが、正直サーナイトに進化させて2枚貼ってーという動きは弱い。ので、序盤からエネ加速できる方法を考えました。
+サーナイトGXの特性『ひみつのいずみ』を使えば手張り込みで1ターンに2枚エネが貼れるのですが、正直サーナイトに進化させて2枚貼ってーという動きは弱い。ので、序盤からエネ加速できる方法を考えました。
 
 アブリーが入っているので、アブリボンを買い足して『みつあつめ』（山札から2枚基本エネサーチして手札に加える）も良さそうだなー。アブリボン可愛いし。
 
@@ -44,7 +44,7 @@ image: https://s3-ap-northeast-1.amazonaws.com/t4traw/ss/2019-04-02_14-43-12.png
 
 <img src="https://www.pokemon-card.com/assets/images/card_images/large/SM8/035355_P_MARIRURI.jpg" class="tcg-card">
 
-『みずたまさがり』はワザなので、アブリボンのように特性ではないので確かに利便性は落ちるのですが、「自分の山札を上から8枚見て、その中にあるエネルギーを好きなだけ、自分のポケモンに好きなようにつける。」なので、超加速エネルギーとかの特殊エネルギーも対象と。それをポケモンに直接付けられるというのが面白い。やってみると普通に3-5エネルギーは一度につけられる。
+『みずたまさがし』はワザなので、アブリボンのように特性ではないので確かに利便性は落ちるのですが、「自分の山札を上から8枚見て、その中にあるエネルギーを好きなだけ自分のポケモンに好きなようにつける。」なので、超加速エネルギーとかの特殊エネルギーも対象と。それをポケモンに直接付けられるというのがおもしろい。やってみると普通に3-5エネルギーは一度につけられる。
 
 ## キュワワーはかわいいので続投
 
