--- a/content/blog/2019/07/29-115140.md
+++ b/content/blog/2019/07/29-115140.md
@@ -22,7 +22,7 @@ image: https://t4traw.s3-ap-northeast-1.amazonaws.com/dropshare/Screen-Shot-2019
 
 ## BASEBALL
 
-> いつもヒョロヒョロのぼーるを投げては、相手チームの打者に強打され、マウンド上にひっくり返ってしまうチャーリー・ブラウン。ピーナッツの仲間たちがプレーする連戦連敗の野球チームのピッチャーであり、監督です。そんなチャーリー・ブラウンのこれまでの野球人生を振り返ってみると、うれしかったことよりもガッカリしたことや、不愉快だったことの方が多いはず。それなのに、なぜ彼は野球をやめないのか。なぜいつも打たれてしまうのに、ボールを投げ続けるのか。それは、チャーリー・ブラウンの野球に対する"好き"のエネルギーが、下らない疑問や理屈などを軽く吹き飛ばしてしまうほど大きなものだからですしょう。スポーツでも音楽でも研究でもいい。何かひとつ、どんな困難にぶつかっても、いくつになっても、やり続けるぐらい好きなこと。それと出合えた人は、幸せだと思いませんか。
+> いつもヒョロヒョロのボールを投げては、相手チームの打者に強打され、マウンド上にひっくり返ってしまうチャーリー・ブラウン。ピーナッツの仲間たちがプレーする連戦連敗の野球チームのピッチャーであり、監督です。そんなチャーリー・ブラウンのこれまでの野球人生を振り返ってみると、うれしかったことよりもガッカリしたことや、不愉快だったことの方が多いはず。それなのに、なぜ彼は野球をやめないのか。なぜいつも打たれてしまうのに、ボールを投げ続けるのか。それは、チャーリー・ブラウンの野球に対する"好き"のエネルギーが、下らない疑問や理屈などを軽く吹き飛ばしてしまうほど大きなものだからですしょう。スポーツでも音楽でも研究でもいい。何かひとつ、どんな困難にぶつかっても、いくつになっても、やり続けるぐらい好きなこと。それと出合えた人は、幸せだと思いませんか。
 
 「好きだから、くじけない。」というメッセージと共に書かれていて、これは確かに人生とはそういうコト・モノに出会うための旅みたいなもんだよなぁと、常々思っていました。
 
