archivesのフォーマット修正

--- a/content/blog/2019/08/06-104349.md
+++ b/content/blog/2019/08/06-104349.md
@@ -1,7 +1,7 @@
 ---
 title: Macにruby使いがpythonの開発環境を用意する
 date: 2019-08-06T10:43:50+09:00
-archives: [\"2019/08\"]
+archives: [2019/08]
 categories:
   - 開発
 tags:
