--- a/content/blog/2019/08/06-115626.md
+++ b/content/blog/2019/08/06-115626.md
@@ -1,7 +1,7 @@
 ---
 title: ディープラーニングを勉強しはじめた時の僕のメモ
 date: 2019-08-06T11:56:27+09:00
-archives: [\"2019/08\"]
+archives: [2019/08]
 categories:
   - 開発
 tags:
