--- a/content/blog/2019/08/07-100000.md
+++ b/content/blog/2019/08/07-100000.md
@@ -1,7 +1,7 @@
 ---
 title: 夏休みの自由研究。子供にプログラミングを教えてみる2日目
 date: 2019-08-07T10:00:00+09:00
-archives: [\"2019/08\"]
+archives: [2019/08]
 categories:
   - 子供
 tags:
