--- a/content/blog/2019/08/14-154048.md
+++ b/content/blog/2019/08/14-154048.md
@@ -12,7 +12,6 @@ tags:
   - ゾロアークGX
   - ほっぺすりすり
 image: https://t4traw.s3-ap-northeast-1.amazonaws.com/dropshare/9hVK3vrMTwdvmQPL3zvQYF43JZmo1KHC.jpg
-draft: true
 ---
 
 ポケモンカードもはじめて半年近くが経ちました。子供もルールも覚え、ちょっとした駆け引きなどもできるようになってきました。
@@ -35,7 +34,7 @@ draft: true
 
 相手がポケモンをサーチする手段が無く、ポケモンがいなくなってgg。
 
-## 1戦目（ぼく） vs. エーフィ＆デオキシスGX
+## 1戦目（ぼく）vs. エーフィ＆デオキシスGX
 
 おそらくエーフィ＆デオキシスGXスターターデッキそのままのお母さんとの対戦になりました。
 
@@ -43,7 +42,7 @@ draft: true
 
 エーフィ＆デオキシスを2回ライオットビートで殴って、アーゴヨンGXのスティンガーGXを使って、次のターンでエーフィ＆デオキシスを落としてgg。
 
-## 2戦目（娘） vs. 水デッキ
+## 2戦目（娘）vs. 水デッキ
 
 2戦目と書いてあるけど、実は午前の部と午後の部で別れてしまっているので、娘はデッキをほっぺすりすりデッキに変えました。
 
@@ -57,21 +56,21 @@ draft: true
 
 おたがいのライフが一番低いポケモンを気絶させる技で、自分はヌケニンの効果でサイドを引かせないコンボデッキ。
 
-いやいや、ちょっとこれは想定していないｗ そのコンボは知ってはいたけど、まさか対戦するとは思ってなかったｗ　面白い！すごく面白いデッキ！
+いやいや、ちょっとこれは想定していないｗ そのコンボは知ってはいたけど、まさか対戦するとは思ってなかったｗ　イイ！すごくおもしろいデッキ！
 
 最初はミカルゲで先2ターンから70ダメで早く殴ってくるわ、中盤はゲッコウガ＆戒めの祠でガンガン削ってくる。
 
-コンボパーツは揃ってるけど、非GX相手にサイドレースに負けてる。「これはまいったね……」と思い始めた所、相手がゲッコウガ＆ゾロアークGXをベンチに出す。
+コンボパーツは揃ってるけど、非GX相手にサイドレースで負けてる。「これはまいったね……」と思い始めた所、相手がゲッコウガ＆ゾロアークGXをベンチに出す。
 
 チャンス！これはチャンス！グズマでバトル場に出させてゾロアークGXで殴る。
 
-次のターン、アーゴヨンGXのスティンガーGXを発動し、その次のターンでゾロアークGXで倒して勝利しました。
+次のターン、アーゴヨンGXのスティンガーGXを発動し、その次のターン、ゾロアークGXで倒して勝利しました。
 
 相手はアーゴヨンGXのスティンガーGXコンボを知らないゆえの行動だけど、ゲッコウガ＆ゾロアークGXにフィニッシュ手段がないので、結果的にサイドをひっくり返される可能性のあるTAGチームは出さない方が良かったですね。
 
 しかし、面白かった。自由にデッキ組んで対戦しないとだなぁー。
 
-## 3戦目（娘） vs. ミュウミュウ水バレット
+## 3戦目（娘）vs. ミュウミュウ水バレット
 
 ![](https://t4traw.s3-ap-northeast-1.amazonaws.com/dropshare/G0edOa1StiNaHXYdB40AIGxWkAbjpQNG.jpg)
 
@@ -87,7 +86,7 @@ draft: true
 
 これは相談しながらやってたから、逆転の手があるのバレちゃったかなぁと思いつつも、まあリセットスタンプ引かれた時点で厳しかったですね。
 
-## 3戦目（ぼく） vs. レシリザ
+## 3戦目（ぼく）vs. レシリザ
 
 ついに環境トップのレシリザとのマッチアップ。僕の知り合いにレシリザ使いがいなかったので、これが初対戦。
 
@@ -105,4 +104,17 @@ draft: true
 
 ![](https://t4traw.s3-ap-northeast-1.amazonaws.com/dropshare/vUirbMOlAHE40hAg44U7OP1QQ4JmFWOP.jpg)
 
-3月にポケカを初めて5ヶ月。
+いやぁ、みなさん明るい雰囲気で本当に楽しかったです。この小学生以下がかならず参加のガルーラタッグバトル、もっとやってくれたら参加しやすいんだけどなぁ。娘も非常に楽しく、良い経験になりましたえ。
+
+ぼく？僕は最後のレシリザが悔しすぎて、**無事アンチレシリザになりました**😁 
+
+また参加できたらしたいなぁ。
+
+それでは。
+
+<div class="amazfy">
+<a href="https://www.amazon.co.jp/dp/B07SQWM1QH?tag=t4traw-22">
+<img src="https://ws-fe.amazon-adsystem.com/widgets/q?_encoding=UTF8&ASIN=B07SQWM1QH&Format=_SL250_&ID=AsinImage&MarketPlace=JP&ServiceVersion=20070822&WS=1&tag=t4traw-22&language=ja_JP">
+<p>ポケモンカードゲーム サン&ムーン ハイクラスパック2019 BOX</p>
+</a>
+</div>
