記事を下書き状態に変更

--- a/content/blog/_draft/26-093234.md
+++ b/content/blog/_draft/26-093234.md
@@ -8,6 +8,7 @@ tags:
   - 佐藤愛子
   - エッセイ
 image: https://t4traw.s3-ap-northeast-1.amazonaws.com/dropshare/JB4vCfNSMgm4D6GrKncfzmOtvgRFtNMD.jpg
+draft: true
 ---
 ずっと読もう読もうと思っていた佐藤愛子さんの『九十歳。何がめでたい』を読みました。
 
