--- a/content/blog/_draft/26-142638.md
+++ b/content/blog/_draft/26-142638.md
@@ -13,6 +13,7 @@ tags:
   - エンペルト
   - ほっぺすりすり
 image: https://t4traw.s3-ap-northeast-1.amazonaws.com/dropshare/f3ihadZW6MObRaUrSo3SRESm5ShfJhOE.jpg
+draft: true
 ---
 なんとか予定が合ったので、ポケモンセンター名古屋の夏休み豪華版ガルーラタッグバトルの最終日に参加しました！
 
