--- a/content/blog/_draft/27-110000.md
+++ b/content/blog/_draft/27-110000.md
@@ -21,20 +21,6 @@ image: https://t4traw.s3-ap-northeast-1.amazonaws.com/dropshare/f3ihadZW6MObRaUr
 
 ぼくは先日とりあえず作ってみた[ドリュウズ・エンペルトデッキ](/blog/2019/08/%E3%83%89%E3%83%AA%E3%83%A5%E3%82%A6%E3%82%BA%E3%82%A8%E3%83%B3%E3%83%9A%E3%83%AB%E3%83%88%E3%83%87%E3%83%83%E3%82%AD%E3%82%92%E3%81%A8%E3%82%8A%E3%81%82%E3%81%88%E3%81%9A%E4%BD%9C%E3%81%A3%E3%81%A6%E3%81%BF%E3%82%8B/)で参戦しました。まだエネルギー回収とか入れてない状態でどこまでいけるかな？と。
 
-とりあえず結果を。
-
-#### 娘『ほっぺすりすりデッキ』（2勝1敗）
-
-- vs. サナニンフ・エルフーン ○
-- vs. マーシャドー＆カイリキー ○
-- vs. ジガルデビート ☓
-
-#### ぼく『ドリュウズ・エンペルトデッキ』（1勝2敗）
-
-- vs. メタグロス ○
-- vs. ガブギラ ☓
-- vs. ウルネク ☓
-
 ## 1戦目（娘）vs. サナニンフ・エルフーンデッキ
 
 1戦目はサナニンフ・エルフーンデッキ。ですが、お相手がポケモン絞っているのか、かなり場が辛そうでした。サナニンフスタートでなんとか出てきたモンメンを倒して、ポケモンがいなくなったので勝利しました。
@@ -119,7 +105,7 @@ image: https://t4traw.s3-ap-northeast-1.amazonaws.com/dropshare/f3ihadZW6MObRaUr
 
 <img src="https://www.pokemon-card.com/assets/images/card_images/large/SM11b/037014_P_RAICHUU.jpg" class="tcg-card">
 
-しかし、ジガルデGXは弱点をついているので、特性セルコネクターをもったジガルデがベンチに1体でも入ればダブル無色でライチュウがワンパンで沈むという泣けてくるマッチアップｗ
+しかし、ジガルデGXは弱点をつけるので、特性セルコネクターをもったジガルデがベンチに1体でも入ればダブル無色でライチュウがワンパンで沈むという泣けてくるマッチアップｗ
 
 <img src="https://www.pokemon-card.com/assets/images/card_images/large/SM6/034724_P_JIGARUDEGX.jpg" class="tcg-card">
 
@@ -221,6 +207,18 @@ image: https://t4traw.s3-ap-northeast-1.amazonaws.com/dropshare/f3ihadZW6MObRaUr
 </div>
 
 ---
+
+#### 娘『ほっぺすりすりデッキ』（2勝1敗）
+
+- vs. サナニンフ・エルフーン ○
+- vs. マーシャドー＆カイリキー ○
+- vs. ジガルデビート ☓
+
+#### ぼく『ドリュウズ・エンペルトデッキ』（1勝2敗）
+
+- vs. メタグロス ○
+- vs. ガブギラ ☓
+- vs. ウルネク ☓
 
 3戦したところで、ビンゴ大会の時間になったので終了。
 
