--- a/content/blog/2019/08/27-110000.md
+++ b/content/blog/2019/08/27-110000.md
@@ -136,7 +136,7 @@ image: https://t4traw.s3-ap-northeast-1.amazonaws.com/dropshare/f3ihadZW6MObRaUr
 
 ![](https://t4traw.s3-ap-northeast-1.amazonaws.com/dropshare/ajbtxBsx2p3UtISEtEe7VBvgn6l0zixw.jpg)
 
-最後、ライチュウでなんとか80ダメージをカプ・テテフをあたえる。手札にエネルギーが1枚ある。次のターン、エネルギー手張りで100点……！次のターンさえこれば！相手の手札は2枚ほど。
+ライチュウでなんとか80ダメージをカプ・テテフにあたえる。手札にエネルギーが1枚ある。次のターン、エネルギー手張りで100点……！次のターンさえこれば！相手の手札は2枚ほど。
 
 しかし、相手の子は冷静にカプ・テテフを逃し、ジガルデに闘エネルギーを貼り、特定セルカンパニーの火力アップで（20+20+20）弱点*2で120点。
 
