--- a/content/blog/2019/08/27-110000.md
+++ b/content/blog/2019/08/27-110000.md
@@ -140,12 +140,11 @@ image: https://t4traw.s3-ap-northeast-1.amazonaws.com/dropshare/f3ihadZW6MObRaUr
 
 しかし、相手の子は冷静にカプ・テテフを逃し、ジガルデに闘エネルギーを貼り、特定セルカンパニーの火力アップで（20+20+20）弱点*2で120点。
 
-ライチュウを落とされ娘の唯一の負けになりました。
+ライチュウを落とされ負けてしまいました。
 
 <img src="https://www.pokemon-card.com/assets/images/card_images/large/SM10a/036568_P_JIGARUDE.jpg" class="tcg-card">
 
-
-なんといういい勝負！相手の子はレシラム＆ゼクロムがよっぽどきつかったらしく「悪夢だった！」と対戦後に話していましたｗ
+なんといういい勝負！相手の子はレシラム＆ゼクロムがよっぽどきつかったらしく「悪夢だった！」と対戦後に話していましたｗ 娘は非常に悔しかったようです。
 
 ## 3戦目（ぼく）vs. ウルネク
 
