拡張子修正

--- a/content/blog/2018/01/31.md
+++ b/content/blog/2018/01/31.md
@@ -8,7 +8,7 @@ tags:
   - minecraft
   - linux
   - vultr
-image: minecraft.png
+image: minecraft.jpg
 ---
 娘がお年玉でSwitch版Minecraftを購入したので、「MinecraftPEサーバー建てて一緒にやるかー！サクっとやってやるからな！」とパパのすごい所を見せてやろうと思ったら、結構時間かかったので、全国のパパママのために情報を共有しておきます 🙌
 
